--- a/python_300/1-60.ipynb
+++ b/python_300/1-60.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
     "# 19. year라는 변수가 문자열 타입의 연도를 바인딩하고 있습니다. 이를 정수로 변환한 후 최근 3년의 연도를 화면에 출력해보세요.\n",
     "year = \"2020\"\n",
     "num_year = int(year)\n",
-    "print(num_year-3,num_year-2,num_year-1,sep=\",\")\n",
+    "print(num_year-3,num_year-2,num_year-1,sep=',')\n",
     "\n"
    ]
   },
